[package]
name = "ndb-as"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Autonomous System (AS) database with lookup interface."
repository = "https://github.com/shellrow/ndb"
readme = "README.md"
license = "MIT"

[dependencies]
serde = { workspace = true, features = ["derive"] }
csv = { workspace = true }
bincode = { workspace = true, features = ["serde"] }
anyhow = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[features]
default = ["bundled"]
bundled = []

[[bench]]
name = "as_lookup"
harness = false
