[package]
name = "ndb-country"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Country database with lookup interface."
repository = "https://github.com/shellrow/ndb"
readme = "README.md"
license = "MIT"

[dependencies]
serde = { workspace = true, features = ["derive"] }
csv = { workspace = true }
bincode = { workspace = true, features = ["serde"] }
anyhow = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[features]
default = ["bundled"]
bundled = []

[[bench]]
name = "country_lookup"
harness = false
