[package]
name = "ndb-oui"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Organizationally Unique Identifiers (OUI) database with lookup interface."
repository = "https://github.com/shellrow/ndb"
readme = "README.md"
license = "MIT"

[dependencies]
serde = { workspace = true, features = ["derive"] }
csv = { workspace = true }
netdev = { version = "0.36", default-features = false, features = [] }

[dev-dependencies]
criterion = { workspace = true }

[features]
default = ["bundled"]
bundled = []

[[bench]]
name = "oui_lookup"
harness = false
